fix(auth): use entity User for /me principal; tighten CORS for credentialed requests
Made-with: Cursor